force-app/main/default/objects/OrderApprovalHistory__c/OrderApprovalHistory__c.object-meta.xml
<CustomObject>
    
    <label>Histórico de aprovação do pedido</label>
    <nameField>
        <displayFormat>ORDHIST-{000000}</displayFormat>
        <label>Nome de Histórico de aprovação de pedidos</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Histórico de aprovações de pedidos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>