force-app/main/default/objects/OrderApprovalHistory__c/fields/ActorId__c.field-meta.xml
<CustomField>
    <fullName>ActorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Armazena o aprovador real do pedido, quem de fato aprovou.</description>
    <inlineHelpText>Armazena o aprovador real do pedido, quem de fato aprovou.</inlineHelpText>
    <label>Aprovador real</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hist_rico_de_aprova_es_de_pedidos1</relationshipName>
    <type>Lookup</type>
</CustomField>