force-app/main/default/objects/OrderApprovalHistory__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comentários dos aprovadores.</description>
    <inlineHelpText>Comentários dos aprovadores.</inlineHelpText>
    <label>Comentários</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>