force-app/main/default/objects/OrderApprovalHistory__c/fields/ElapsedTimeInDays__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeInDays__c</fullName>
    <description>Campo que armazena o número de dias entre as etapas.</description>
    <inlineHelpText>Campo que armazena o número de dias entre as etapas.</inlineHelpText>
    <label>Tempo passado em dias</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>