force-app/main/default/objects/OrderApprovalHistory__c/fields/ElapsedTimeInHours__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeInHours__c</fullName>
    <description>Campo que armazena o número de horas entre as etapas</description>
    <inlineHelpText>Campo que armazena o número de horas entre as etapas</inlineHelpText>
    <label>Tempo passado em horas</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>