force-app/main/default/objects/OrderApprovalHistory__c/fields/ElapsedTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>ElapsedTimeInMinutes__c</fullName>
    <description>Campo que armazena o número de minutos entre as etapas.</description>
    <inlineHelpText>Campo que armazena o número de minutos entre as etapas.</inlineHelpText>
    <label>Tempo passado em minutos</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>