force-app/main/default/objects/OrderApprovalHistory__c/fields/OriginalActorId__c.field-meta.xml
<CustomField>
    <fullName>OriginalActorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Armazena o aprovador original do pedido</description>
    <label>Aprovador Original</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Hist_rico_de_aprova_es_de_pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>