force-app/main/default/objects/OrderApprovalHistory__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <description>Campo que armazena o pedido relacionado ao histórico.</description>
    <inlineHelpText>Campo que armazena o pedido relacionado ao histórico.</inlineHelpText>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Histórico de aprovações de pedidos</relationshipLabel>
    <relationshipName>Hist_rico_de_aprova_es_de_pedidos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>