force-app/main/default/objects/OrderApprovalHistory__c/fields/ProcessInstanceStepCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstanceStepCreatedDate__c</fullName>
    <description>Campo que armazena a data de criação da etapa do processo de aprovação.</description>
    <inlineHelpText>Campo que armazena a data de criação da etapa do processo de aprovação.</inlineHelpText>
    <label>Data do passo do processo</label>
    <type>DateTime</type>
</CustomField>