force-app/main/default/objects/OrderApprovalHistory__c/fields/ProcessInstanceStepId__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstanceStepId__c</fullName>
    <externalId>true</externalId>
    <label>ID do Passo da Instancia do Processo</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>