force-app/main/default/objects/OrderApprovalHistory__c/fields/StepStatus__c.field-meta.xml
<CustomField>
    <fullName>StepStatus__c</fullName>
    <description>Marca o status do passo de aprovação.</description>
    <inlineHelpText>Marca o status do passo de aprovação.</inlineHelpText>
    <label>Status da etapa</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
                <default>true</default>
                <label>Iniciado</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>Aprovado</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>Rejeitado</label>
            </value>
            <value>
                <fullName>Fault</fullName>
            </value>
            <value>
                <fullName>Held</fullName>
            </value>
            <value>
                <fullName>NoResponse</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>