force-app/main/default/objects/OrderApprovalHistory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActorId__c</columns>
    <columns>Pedido__c</columns>
    <columns>ProcessInstanceStepCreatedDate__c</columns>
    <columns>StepStatus__c</columns>
    <columns>Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>